refatorado a rota de armazenamento de infos do jogador logado no jogo, atualizando banco de dados com essas informações
