# src/routes/userRoute.js
@@ -10,7 +10,7 @@ import {
 
 const routes = express.Router();
 
-const { createUserValidator, loginValidator } = getValidators();
+const { createUserValidator, loginValidator, storeUserInfoValidator } = getValidators();
 
 dotenv.config();
 
@@ -36,6 +36,14 @@ routes.post(
   userController.sendEmail,
 );
 
+routes.post(
+  '/store-user-info',
+  verifyApiKey,
+  verifyToken,
+  storeUserInfoValidator,
+  validateData,
+  userController.storeUserInfo,
+);
 
 // rota de exemplo, apenas para testar a verificação do token de logado esta correta
 // routes.post('/store-user-informations', verifyApiKey, verifyToken, async (req, res) => {
@@ -46,40 +54,5 @@ routes.get('/users/:email', verifyApiKey, userController.findUserByEmail);
 routes.put('/users/:email', verifyApiKey, userController.atualizaDadosUser);
 routes.get('/users', verifyApiKey, userController.findAllUsers);
 routes.delete('/users', verifyApiKey, userController.deleteUser);
-
-
-
-app.post('/pontuacao', async (req, res) => {
-  const { email, pontos } = req.body;
-  
-  try {
-      let playerScore = await prisma.playerScore.findUnique({
-          where: { email },
-      });
-
-      if (!playerScore) {
-          playerScore = await prisma.playerScore.create({
-              data: {
-                  email,
-                  pontos,
-              },
-          });
-      } else {
-          playerScore = await prisma.playerScore.update({
-              where: { email },
-              data: {
-                  pontos: {
-                      increment: pontos,
-                  },
-              },
-          });
-      }
-
-      res.send('Pontuação atualizada com sucesso!');
-  } catch (err) {
-      console.error('Erro ao atualizar pontuação:', err);
-      res.status(500).send('Erro ao atualizar pontuação');
-  }
-});
 
 export default routes;
